// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic postcss-config: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_a772e92e (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_73424376 = \\"a {\\\\n  width: 30%;\\\\n  color: red\\\\n}\\\\n\\\\n.multiline,\\\\n.selector {\\\\n  box-shadow: inset 0 2px 0px #dcffa6,\\\\n              0 2px 5px #000\\\\n}\\\\n\\";
injector_a772e92e(css_73424376);
"
`;

exports[`basic postcss-options: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_10ba2831 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_0b0f16fa = \\".subpartial {\\\\n  -webkit-box-shadow: inset 0 2px 0px #dcffa6,\\\\n              0 2px 5px #000;\\\\n     -moz-box-shadow: inset 0 2px 0px #dcffa6,\\\\n              0 2px 5px #000;\\\\n          box-shadow: inset 0 2px 0px #dcffa6,\\\\n              0 2px 5px #000\\\\n}\\\\n\\\\n.partial {\\\\n    color: red\\\\n}\\\\n\\\\n.prefixed {\\\\n  display: -webkit-box;\\\\n  display: -webkit-flex;\\\\n  display: -moz-box;\\\\n  display: -ms-flexbox;\\\\n  display: flex\\\\n}\\\\n\\";
injector_10ba2831(css_0b0f16fa);
"
`;

exports[`basic resolvers: css 1`] = `
".subfoo {
  background-image: url(\\"/pubpath/bg.png\\");
  background-image: url(\\"/pubpath/bg.testing.regex.png\\");
}

.foo {
  background-image: url(\\"/pubpath/bg.png\\"), url(\\"/pubpath/bg1.testing.regex.png\\"), url(\\"/pubpath/bg1.testing.regex.png\\");
}

.foo2 {
  background-image: -webkit-image-set(
    \\"/pubpath/cat.png\\" 1x,
    url(\\"/pubpath/cat-2x.png\\") 2x,
    url(/pubpath/cat-print.png) 600dpi
  );
  background-image: image-set(\\"/pubpath/cat.png\\" 1x);
}
.bar {
  background-image: url(\\"/pubpath/bg1.png\\");
  background-image: url(\\"/pubpath/bg2.testing.regex.png\\"); }

.bar2 {
  color: magenta;
  background-image: url(\\"https://via.placeholder.com/1920x1080\\"); }

.ignore-data-uri {
  background-image: url(/pubpath/bg2.png);
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkBAMAAACCzIhnAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAiklEQVRYhe3QMQ6EIBAF0C+GSInF9mYTs+1ewRsQbmBlayysKefYO2asXbbYxvxHQj6ECQMAEREREf2NQ/fCtp5Zky6vtRMkSJEzhyISynWJnzH6Z8oQlzS7lEc/fLmmQUSvc16OrCPqRl1JePxQYo1ZSWVj9nxrrOb5esw+eXdvzTWfTERERHRXH4tWFZGswQ2yAAAAAElFTkSuQmCC\\"); }
"
`;

exports[`basic resolvers: js 1`] = `
"
"
`;

exports[`basic resolvers-url-inline: css 1`] = `
".subfoo {
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGYAAABmBAMAAADL8flRAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAArUlEQVRYhe3QIQ+CUBTF8cPTB8RHsKMTqQQ/gMqmVRkj4+ZmZQRnNBD42F7Afp3N7fxIN/zH2wGIiIiI6J8ZBKk95NMRo23KdaYksz36oKtv47F14et59HdKY69I7AoX9PMMlTPnIrZOe5sHJ18Hc5fDeXKH2n+mpmzgLz6NPWmJNIlNNkA4NvK2ov6ikQ1kqWKYYdggVxNpgtREER6ygTyzbZaRugERERER/eYNUMwTiwsgIHkAAAAASUVORK5CYII=\\");
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGgAAABoBAMAAADvMqiSAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAn0lEQVRYhe3QoQ7CMBSF4XNHSidvBcEOkg2L4AFG9gKDEDQz6AIGORSvTbs9QCsR51PX/GlzACIiIiKilApPj9N8F7A7GE02By39G4/pXhzxtaNNR1ct+vNyQDl2MANqU93TEVQgFwEaDwgUqzYzeoVo6Odovc+Jwvc2TvGZotpsncuI4hAC07QxCkMg56U4ucDeuhiFyXMiIiIiIvpXP7QVEbg2Dt6kAAAAAElFTkSuQmCC\\");
}

.foo {
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGYAAABmBAMAAADL8flRAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAArUlEQVRYhe3QIQ+CUBTF8cPTB8RHsKMTqQQ/gMqmVRkj4+ZmZQRnNBD42F7Afp3N7fxIN/zH2wGIiIiI6J8ZBKk95NMRo23KdaYksz36oKtv47F14et59HdKY69I7AoX9PMMlTPnIrZOe5sHJ18Hc5fDeXKH2n+mpmzgLz6NPWmJNIlNNkA4NvK2ov6ikQ1kqWKYYdggVxNpgtREER6ygTyzbZaRugERERER/eYNUMwTiwsgIHkAAAAASUVORK5CYII=\\"), url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGcAAABnBAMAAADvb0HKAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAArElEQVRYhe3QsQrCMBSF4dvWNBkDvkBoSV2LFOcUwTmKOrfiA5ROjrUi9LFNxD2ZnM43neWHyyUCAAAAAAhRNA6i6L47Jb6huQo2jRTT45wpv7OWFv4222B0lak9XXIlpj2xnjTT9hY+TyaUUFtTNZAbkuRqHRkJRb39RTRHRO68HZP0rH2kWdkdIyL3iCY3rDQ+WvjL3CMi93JeWN4dfORePupwBAAAAAB/8AHBTxW2Bfq/hQAAAABJRU5ErkJggg==\\"), url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGcAAABnBAMAAADvb0HKAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAArElEQVRYhe3QsQrCMBSF4dvWNBkDvkBoSV2LFOcUwTmKOrfiA5ROjrUi9LFNxD2ZnM43neWHyyUCAAAAAAhRNA6i6L47Jb6huQo2jRTT45wpv7OWFv4222B0lak9XXIlpj2xnjTT9hY+TyaUUFtTNZAbkuRqHRkJRb39RTRHRO68HZP0rH2kWdkdIyL3iCY3rDQ+WvjL3CMi93JeWN4dfORePupwBAAAAAB/8AHBTxW2Bfq/hQAAAABJRU5ErkJggg==\\");
}

.foo2 {
  background-image: -webkit-image-set(
    \\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGkAAABpBAMAAADLrBAJAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAnElEQVRYhe3PsQrCMBSF4VMlXscUBVdFa1dxcqxKnSs4dLTgA+QRIijtYytEoVvuKHK+7R8ONwGIiIiIiH7DAJIjnfUiSV1sNNyjFe/6IfFTpkFmMg+M/THEvFa8MIHFZFECaxfCbqeVbvV8AE31We3qQrF6Pwpn4L75hrGKVSudv8EsixC+G2luSW4OJeR6CoHLKv4vIiIiIvoXL2T2FCChkjByAAAAAElFTkSuQmCC\\" 1x,
    url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGoAAABqBAMAAACmD9mkAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAApElEQVRYhe3QMQvCMBQE4JeQpBkDKjg6KDh26A8oivuziDg6FFxDB+mooOjPNthAx2QUvG87yMHlEQEAAAAA/IgFdb5Y8hio2yVLlbO+v1g/BuNfydbRSW62xPRW5RBUqdMLnSCxnjLJNgZ5Ty/8PpyfajKzGMTzkdEKo1bakZ3EIHmf0QoH6E1NTRVDcWszWuHYh3D5qzoPQW8y/gUAAAAAf+0DO24Zj6Rrj5AAAAAASUVORK5CYII=\\") 2x,
    url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGsAAABrBAMAAACCkWE/AAAAG1BMVEXMzMyWlpacnJy+vr6jo6O3t7eqqqqxsbHFxcVN2lQOAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAkElEQVRYhe3QvQrCMBiF4bf/jgkujr0GqXoLjh3EOQpFRzfXkCvXQIpujbPnGQLvcOAjICIiIiLyb3qu7mLNJ1prl1eD6dyNyn0F++XZzpQ+0Hqe9ZiCe8aRpqDgAOVpjuqROztCs5mj9jmz912rHrp1CkLGivgLjYOwTcE5axb/fIQpPjGYcmYiIiIiIj94Ac0gFNmWs7ZeAAAAAElFTkSuQmCC) 600dpi
  );
  background-image: image-set(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGkAAABpBAMAAADLrBAJAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAnElEQVRYhe3PsQrCMBSF4VMlXscUBVdFa1dxcqxKnSs4dLTgA+QRIijtYytEoVvuKHK+7R8ONwGIiIiIiH7DAJIjnfUiSV1sNNyjFe/6IfFTpkFmMg+M/THEvFa8MIHFZFECaxfCbqeVbvV8AE31We3qQrF6Pwpn4L75hrGKVSudv8EsixC+G2luSW4OJeR6CoHLKv4vIiIiIvoXL2T2FCChkjByAAAAAElFTkSuQmCC\\" 1x);
}
.bar {
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkBAMAAACCzIhnAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAiklEQVRYhe3QMQ6EIBAF0C+GSInF9mYTs+1ewRsQbmBlayysKefYO2asXbbYxvxHQj6ECQMAEREREf2NQ/fCtp5Zky6vtRMkSJEzhyISynWJnzH6Z8oQlzS7lEc/fLmmQUSvc16OrCPqRl1JePxQYo1ZSWVj9nxrrOb5esw+eXdvzTWfTERERHRXH4tWFZGswQ2yAAAAAElFTkSuQmCC\\");
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGUAAABlBAMAAACmUjD8AAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAi0lEQVRYhe3QoQ7CMBRG4b/bGipr8DMNFsEL7A2WifkpLEGgl2D62NwRmG2RJOcT7a04SXMlAAAA/LNGh5Mdn1n3m/pS0g7K4Tl857DmSyw1flHyaZFyN9rcjNNcbOQUFZ00XbfZvd+1TTj+0iTf7439rarJYd3/ZjuoamzX1jy683bZrssNAAAApBeYlQ7gQL3QgQAAAABJRU5ErkJggg==\\"); }

.bar2 {
  color: magenta;
  background-image: url(\\"https://via.placeholder.com/1920x1080\\"); }

.ignore-data-uri {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGwAAABsBAMAAAB9SEr+AAAAG1BMVEXMzMyWlpacnJy3t7ejo6O+vr6qqqqxsbHFxcUT5ek+AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAsklEQVRYhe3RMQuCQBjG8cek88YzFBo1SRwlHBqLhhrLvoC0uEaINZoFfe3OyNlbmnp+2zP8uRcFiIiIiIj+TiDicTjvB05FPtkPV5mqxSVd9MMpysgOhrOjSuRsqbOrSPUYNW30MMigFHzXB0ZZNyxYB9fgyC7zbhVg+99s+1qZZIkMmzvgfDJ95FQqk6wWVaoPbPNu6E+ysY1eE7Fc74BSnPXQP+DpNQYZEREREdHPvQFNvRay9sR69AAAAABJRU5ErkJggg==);
  background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkBAMAAACCzIhnAAAAG1BMVEXMzMyWlpacnJy+vr6jo6PFxcW3t7eqqqqxsbHbm8QuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAiklEQVRYhe3QMQ6EIBAF0C+GSInF9mYTs+1ewRsQbmBlayysKefYO2asXbbYxvxHQj6ECQMAEREREf2NQ/fCtp5Zky6vtRMkSJEzhyISynWJnzH6Z8oQlzS7lEc/fLmmQUSvc16OrCPqRl1JePxQYo1ZSWVj9nxrrOb5esw+eXdvzTWfTERERHRXH4tWFZGswQ2yAAAAAElFTkSuQmCC\\"); }
"
`;

exports[`basic resolvers-url-inline: js 1`] = `
"
"
`;

exports[`basic simple: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_8aeabfb4 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_a87c82eb);

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_6e569e18);

const css_a00496d3 = \\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
injector_8aeabfb4(css_a00496d3);

const css_855b3ad0 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_855b3ad0);

const css_31899cde = \\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\";
injector_8aeabfb4(css_31899cde);

const css_aee437ad = \\".less {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
injector_8aeabfb4(css_aee437ad);

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`basic skip-loader: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_6d837214 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_147dacc9 = \\".style {\\\\n  color: red;\\\\n}\\\\n\\";
injector_6d837214(css_147dacc9);
"
`;

exports[`code-splitting single: css 1`] = `
".third_third {
  color: maroon; }

.fourth_fourth {
  color: magenta; }

.first_partial {
  color: rosybrown;
}
.first_first {
  color: red; }

.second_second {
  color: royalblue; }

.otherScript_otherScript {
  color: wheat; }

.nestedScript_nestedScript {
  color: rebeccapurple; }

.nondynamic_nondynamic {
  color: deepskyblue; }

.nondynamic2_nondynamic2 {
  color: deeppink; }

/*# sourceMappingURL=extracted.css.map */"
`;

exports[`code-splitting single: js 1`] = `
"const css_c80ea5b3 = \\".first_partial {\\\\n  color: rosybrown;\\\\n}\\\\n.first_first {\\\\n  color: red; }\\\\n\\";
const modules_9c526d97 = {\\"partial\\":\\"first_partial\\",\\"first\\":\\"first_first\\"};
const css = css_c80ea5b3;

export default modules_9c526d97;
export { css };
"
`;

exports[`code-splitting single: js 2`] = `
"const modules_0858c0ee = {\\"fourth\\":\\"fourth_fourth\\"};

(async () => {
  const first = await import('./first-4ee52dc0.js');
  const second = await import('./second-0e0469bf.js');
  const otherScript = await import('./other-script-71e1de4d.js');
  console.log(first, second, otherScript);
})();

console.log(modules_0858c0ee);
"
`;

exports[`code-splitting single: js 3`] = `
"const modules_f895f00f = {\\"nondynamic2\\":\\"nondynamic2_nondynamic2\\"};

console.log(modules_f895f00f);
"
`;

exports[`code-splitting single: js 4`] = `
"console.log(\\"noncss\\");
"
`;

exports[`code-splitting single: js 5`] = `
"(async () => {
  await import('./noncss-f3feb5ac.js');
  const nestedScript = await import('./nested-script-3a18b46f.js');
  console.log(nestedScript);
})();
"
`;

exports[`code-splitting single: js 6`] = `
"const css_80152599 = \\".second_second {\\\\n  color: royalblue; }\\\\n\\";
const modules_7f4bc46a = {\\"second\\":\\"second_second\\"};
const css = css_80152599;

export default modules_7f4bc46a;
export { css };
"
`;

exports[`code-splitting single: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/third.scss\\",\\"../../../../code-splitting/fourth.scss\\",\\"../../../../code-splitting/partial.css\\",\\"../../../../code-splitting/first.scss\\",\\"../../../../code-splitting/second.scss\\",\\"../../../../code-splitting/other-script.scss\\",\\"../../../../code-splitting/nested-script.scss\\",\\"../../../../code-splitting/nondynamic.scss\\",\\"../../../../code-splitting/nondynamic2.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,aAAa,EAAA;;ACDf;EACE,cAAc,EAAA;;ACDhB;EACE,gBAAgB;AAClB;ACAA;EACE,UAAU,EAAA;;ACHZ;EACE,gBAAgB,EAAA;;ACDlB;EACE,YAAY,EAAA;;ACDd;EACE,oBAAoB,EAAA;;ACDtB;EACE,kBAAkB,EAAA;;ACDpB;EACE,eAAe,EAAA\\",\\"file\\":\\"extracted-f4bbb105.css\\",\\"sourcesContent\\":[\\".third {\\\\n  color: maroon;\\\\n}\\\\n\\",\\".fourth {\\\\n  color: magenta;\\\\n}\\\\n\\",\\".partial {\\\\n  color: rosybrown;\\\\n}\\\\n\\",\\"@import \\\\\\"./partial.css\\\\\\";\\\\n\\\\n.first {\\\\n  color: red;\\\\n}\\\\n\\",\\".second {\\\\n  color: royalblue;\\\\n}\\\\n\\",\\".other-script {\\\\n  color: wheat;\\\\n}\\\\n\\",\\".nested-script {\\\\n  color: rebeccapurple;\\\\n}\\\\n\\",\\".nondynamic {\\\\n  color: deepskyblue;\\\\n}\\\\n\\",\\".nondynamic2 {\\\\n  color: deeppink;\\\\n}\\\\n\\"]}"`;

exports[`code-splitting true: css 1`] = `
".first_partial {
  color: rosybrown;
}
.first_first {
  color: red; }

/*# sourceMappingURL=first.css.map */"
`;

exports[`code-splitting true: css 2`] = `
".third_third {
  color: maroon; }

.fourth_fourth {
  color: magenta; }

/*# sourceMappingURL=index.css.map */"
`;

exports[`code-splitting true: css 3`] = `
".nestedScript_nestedScript {
  color: rebeccapurple; }

.nondynamic_nondynamic {
  color: deepskyblue; }

.nondynamic2_nondynamic2 {
  color: deeppink; }

/*# sourceMappingURL=nested-script.css.map */"
`;

exports[`code-splitting true: css 4`] = `
".otherScript_otherScript {
  color: wheat; }

/*# sourceMappingURL=other-script.css.map */"
`;

exports[`code-splitting true: css 5`] = `
".second_second {
  color: royalblue; }

/*# sourceMappingURL=second.css.map */"
`;

exports[`code-splitting true: js 1`] = `
"const css_c80ea5b3 = \\".first_partial {\\\\n  color: rosybrown;\\\\n}\\\\n.first_first {\\\\n  color: red; }\\\\n\\";
const modules_9c526d97 = {\\"partial\\":\\"first_partial\\",\\"first\\":\\"first_first\\"};
const css = css_c80ea5b3;

export default modules_9c526d97;
export { css };
"
`;

exports[`code-splitting true: js 2`] = `
"const modules_0858c0ee = {\\"fourth\\":\\"fourth_fourth\\"};

(async () => {
  const first = await import('./first-4ee52dc0.js');
  const second = await import('./second-0e0469bf.js');
  const otherScript = await import('./other-script-71e1de4d.js');
  console.log(first, second, otherScript);
})();

console.log(modules_0858c0ee);
"
`;

exports[`code-splitting true: js 3`] = `
"const modules_f895f00f = {\\"nondynamic2\\":\\"nondynamic2_nondynamic2\\"};

console.log(modules_f895f00f);
"
`;

exports[`code-splitting true: js 4`] = `
"console.log(\\"noncss\\");
"
`;

exports[`code-splitting true: js 5`] = `
"(async () => {
  await import('./noncss-f3feb5ac.js');
  const nestedScript = await import('./nested-script-3a18b46f.js');
  console.log(nestedScript);
})();
"
`;

exports[`code-splitting true: js 6`] = `
"const css_80152599 = \\".second_second {\\\\n  color: royalblue; }\\\\n\\";
const modules_7f4bc46a = {\\"second\\":\\"second_second\\"};
const css = css_80152599;

export default modules_7f4bc46a;
export { css };
"
`;

exports[`code-splitting true: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/partial.css\\",\\"../../../../code-splitting/first.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,gBAAgB;AAClB;ACAA;EACE,UAAU,EAAA\\",\\"file\\":\\"first-5d1a2d67.css\\",\\"sourcesContent\\":[\\".partial {\\\\n  color: rosybrown;\\\\n}\\\\n\\",\\"@import \\\\\\"./partial.css\\\\\\";\\\\n\\\\n.first {\\\\n  color: red;\\\\n}\\\\n\\"]}"`;

exports[`code-splitting true: map 2`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/third.scss\\",\\"../../../../code-splitting/fourth.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,aAAa,EAAA;;ACDf;EACE,cAAc,EAAA\\",\\"file\\":\\"index-e2463627.css\\",\\"sourcesContent\\":[\\".third {\\\\n  color: maroon;\\\\n}\\\\n\\",\\".fourth {\\\\n  color: magenta;\\\\n}\\\\n\\"]}"`;

exports[`code-splitting true: map 3`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/nested-script.scss\\",\\"../../../../code-splitting/nondynamic.scss\\",\\"../../../../code-splitting/nondynamic2.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,oBAAoB,EAAA;;ACDtB;EACE,kBAAkB,EAAA;;ACDpB;EACE,eAAe,EAAA\\",\\"file\\":\\"nested-script-ccf730db.css\\",\\"sourcesContent\\":[\\".nested-script {\\\\n  color: rebeccapurple;\\\\n}\\\\n\\",\\".nondynamic {\\\\n  color: deepskyblue;\\\\n}\\\\n\\",\\".nondynamic2 {\\\\n  color: deeppink;\\\\n}\\\\n\\"]}"`;

exports[`code-splitting true: map 4`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/other-script.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,YAAY,EAAA\\",\\"file\\":\\"other-script-ae9cb42b.css\\",\\"sourcesContent\\":[\\".other-script {\\\\n  color: wheat;\\\\n}\\\\n\\"]}"`;

exports[`code-splitting true: map 5`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../code-splitting/second.scss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,gBAAgB,EAAA\\",\\"file\\":\\"second-b4686c0e.css\\",\\"sourcesContent\\":[\\".second {\\\\n  color: royalblue;\\\\n}\\\\n\\"]}"`;

exports[`emit true: js 1`] = `
"import { css } from 'lit-element';

var style = css\`main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
}
\`;

console.log(style);
"
`;

exports[`extract custom-path: css 1`] = `
".foo {
  color: red;
}

.bar {
  color: red;
}

.stylus {
  color: #f00;
  background: #f00;
}

.pcss {
  color: red;
}

.sass {
  width: 30%;
  color: red; }

.less {
  color: #6c94be;
}

/*# sourceMappingURL=extracted.css.map */"
`;

exports[`extract custom-path: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`extract custom-path: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../../../simple/foo.css\\",\\"../../../../../../simple/bar.css\\",\\"../../../../../../simple/style.styl\\",\\"../../../../../../simple/style.pcss\\",\\"../../../../../../simple/style.sass\\",\\"../../../../../../simple/style.less\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;AACZ;;ACFA;EACE,WAAO;EACP,gBAAY;AACd;;ACHA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;EACV,UAAU,EAAA;;ACCZ;EACE,cAAA;AAFF\\",\\"file\\":\\"extracted-c25c2e3a.css\\",\\"sourcesContent\\":[\\".foo {\\\\n  color: red;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\",\\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\",\\"@nice-blue: #5b83ad;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n.less {\\\\n  color: @light-blue;\\\\n}\\\\n\\"]}"`;

exports[`extract sourcemap-inline: css 1`] = `
".foo {
  color: red;
}

.bar {
  color: red;
}

.stylus {
  color: #f00;
  background: #f00;
}

.pcss {
  color: red;
}

.sass {
  width: 30%;
  color: red; }

.less {
  color: #6c94be;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uLy4uL3NpbXBsZS9mb28uY3NzIiwiLi4vLi4vLi4vc2ltcGxlL2Jhci5jc3MiLCIuLi8uLi8uLi9zaW1wbGUvc3R5bGUuc3R5bCIsIi4uLy4uLy4uL3NpbXBsZS9zdHlsZS5wY3NzIiwiLi4vLi4vLi4vc2ltcGxlL3N0eWxlLnNhc3MiLCIuLi8uLi8uLi9zaW1wbGUvc3R5bGUubGVzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLFdBQU87RUFDUCxnQkFBWTtBQUNkOztBQ0hBO0VBQ0UsVUFBVTtBQUNaOztBQ0ZBO0VBQ0UsVUFBVTtFQUNWLFVBQVUsRUFBQTs7QUNDWjtFQUNFLGNBQUE7QUFGRiIsImZpbGUiOiJpbmRleC5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIuZm9vIHtcbiAgY29sb3I6IHJlZDtcbn1cbiIsIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIiwiLnN0eWx1cyB7XG4gIGNvbG9yOiAjZjAwO1xuICBiYWNrZ3JvdW5kOiAjZjAwO1xufVxuIiwiLnBjc3Mge1xuICBjb2xvcjogcmVkO1xufVxuIiwiLnNhc3Mge1xuICB3aWR0aDogMzAlO1xuICBjb2xvcjogcmVkOyB9XG4iLCJAbmljZS1ibHVlOiAjNWI4M2FkO1xuQGxpZ2h0LWJsdWU6IEBuaWNlLWJsdWUgKyAjMTExO1xuXG4ubGVzcyB7XG4gIGNvbG9yOiBAbGlnaHQtYmx1ZTtcbn1cbiJdfQ== */"
`;

exports[`extract sourcemap-inline: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`extract sourcemap-true: css 1`] = `
".foo {
  color: red;
}

.bar {
  color: red;
}

.stylus {
  color: #f00;
  background: #f00;
}

.pcss {
  color: red;
}

.sass {
  width: 30%;
  color: red; }

.less {
  color: #6c94be;
}

/*# sourceMappingURL=index.css.map */"
`;

exports[`extract sourcemap-true: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`extract sourcemap-true: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../simple/foo.css\\",\\"../../../../simple/bar.css\\",\\"../../../../simple/style.styl\\",\\"../../../../simple/style.pcss\\",\\"../../../../simple/style.sass\\",\\"../../../../simple/style.less\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;AACZ;;ACFA;EACE,WAAO;EACP,gBAAY;AACd;;ACHA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;EACV,UAAU,EAAA;;ACCZ;EACE,cAAA;AAFF\\",\\"file\\":\\"index-3775aa29.css\\",\\"sourcesContent\\":[\\".foo {\\\\n  color: red;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\",\\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\",\\"@nice-blue: #5b83ad;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n.less {\\\\n  color: @light-blue;\\\\n}\\\\n\\"]}"`;

exports[`extract true: css 1`] = `
".foo {
  color: red;
}

.bar {
  color: red;
}

.stylus {
  color: #f00;
  background: #f00;
}

.pcss {
  color: red;
}

.sass {
  width: 30%;
  color: red; }

.less {
  color: #6c94be;
}
"
`;

exports[`extract true: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`inject function: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_a87c82eb);

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_6e569e18);

const css_a00496d3 = \\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
console.log(css_a00496d3);

const css_855b3ad0 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_855b3ad0);

const css_31899cde = \\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\";
console.log(css_31899cde);

const css_aee437ad = \\".less {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
console.log(css_aee437ad);

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`inject top: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_8aeabfb4 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_a87c82eb,{\\"prepend\\":true});

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_6e569e18,{\\"prepend\\":true});

const css_a00496d3 = \\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
injector_8aeabfb4(css_a00496d3,{\\"prepend\\":true});

const css_855b3ad0 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
injector_8aeabfb4(css_855b3ad0,{\\"prepend\\":true});

const css_31899cde = \\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\";
injector_8aeabfb4(css_31899cde,{\\"prepend\\":true});

const css_aee437ad = \\".less {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
injector_8aeabfb4(css_aee437ad,{\\"prepend\\":true});

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`less import: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_e1c140db (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_427c8846 = \\".d {\\\\n  color: red;\\\\n}\\\\n.a {\\\\n  color: royalblue;\\\\n}\\\\n.b {\\\\n  color: red;\\\\n}\\\\n.c {\\\\n  color: red;\\\\n}\\\\n.foo {\\\\n  color: royalblue;\\\\n}\\\\n\\";
injector_e1c140db(css_427c8846);
"
`;

exports[`minimize extract: css 1`] = `".bar,.foo,.stylus{color:red}.stylus{background:red}.pcss,.sass{color:red}.sass{width:30%}.less{color:#6c94be}"`;

exports[`minimize extract: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`minimize extract-sourcemap-inline: css 1`] = `
".bar,.foo,.stylus{color:red}.stylus{background:red}.pcss,.sass{color:red}.sass{width:30%}.less{color:#6c94be}
/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uLy4uL3NpbXBsZS9zdHlsZS5zdHlsIiwiLi4vLi4vLi4vc2ltcGxlL2Jhci5jc3MiLCIuLi8uLi8uLi9zaW1wbGUvc3R5bGUuc2FzcyIsIi4uLy4uLy4uL3NpbXBsZS9zdHlsZS5wY3NzIiwiLi4vLi4vLi4vc2ltcGxlL3N0eWxlLmxlc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUEsa0JDQ0UsU0RFRixDQUhBLFFBRUUsY0FDRixDRUhBLFlDQ0UsU0RDVSxDQUZaLE1BQ0UsU0FDVSxDRUNaLE1BQ0UsYUFGRiIsImZpbGUiOiJpbmRleC5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIuc3R5bHVzIHtcbiAgY29sb3I6ICNmMDA7XG4gIGJhY2tncm91bmQ6ICNmMDA7XG59XG4iLCIuYmFyIHtcbiAgY29sb3I6IHJlZDtcbn1cbiIsIi5zYXNzIHtcbiAgd2lkdGg6IDMwJTtcbiAgY29sb3I6IHJlZDsgfVxuIiwiLnBjc3Mge1xuICBjb2xvcjogcmVkO1xufVxuIiwiQG5pY2UtYmx1ZTogIzViODNhZDtcbkBsaWdodC1ibHVlOiBAbmljZS1ibHVlICsgIzExMTtcblxuLmxlc3Mge1xuICBjb2xvcjogQGxpZ2h0LWJsdWU7XG59XG4iXX0= */"
`;

exports[`minimize extract-sourcemap-inline: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`minimize extract-sourcemap-true: css 1`] = `
".bar,.foo,.stylus{color:red}.stylus{background:red}.pcss,.sass{color:red}.sass{width:30%}.less{color:#6c94be}
/*# sourceMappingURL=index.css.map */"
`;

exports[`minimize extract-sourcemap-true: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`minimize extract-sourcemap-true: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../simple/style.styl\\",\\"../../../../simple/bar.css\\",\\"../../../../simple/style.sass\\",\\"../../../../simple/style.pcss\\",\\"../../../../simple/style.less\\"],\\"names\\":[],\\"mappings\\":\\"AAAA,kBCCE,SDEF,CAHA,QAEE,cACF,CEHA,YCCE,SDCU,CAFZ,MACE,SACU,CECZ,MACE,aAFF\\",\\"file\\":\\"index-06d16292.css\\",\\"sourcesContent\\":[\\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\",\\"@nice-blue: #5b83ad;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n.less {\\\\n  color: @light-blue;\\\\n}\\\\n\\"]}"`;

exports[`minimize inject: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_8aeabfb4 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a87c82eb = \\".foo{color:red}\\";
injector_8aeabfb4(css_a87c82eb);

const css_6e569e18 = \\".bar{color:red}\\";
injector_8aeabfb4(css_6e569e18);

const css_a00496d3 = \\".stylus{color:red;background:red}\\";
injector_8aeabfb4(css_a00496d3);

const css_855b3ad0 = \\".pcss{color:red}\\";
injector_8aeabfb4(css_855b3ad0);

const css_31899cde = \\".sass{width:30%;color:red}\\";
injector_8aeabfb4(css_31899cde);

const css_aee437ad = \\".less{color:#6c94be}\\";
injector_8aeabfb4(css_aee437ad);

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`modules auto-modules: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_717f9233 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_7ffcb4b5 = \\".global {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_7ffcb4b5);

const css_bea182d1 = \\".a_module_a {\\\\n  color: red;\\\\n}\\\\n\\";
const modules_dc9297a5 = {\\"a\\":\\"a_module_a\\"};
injector_717f9233(css_bea182d1);

const css_ab26163b = \\".b_module_b {\\\\n  color: red; }\\\\n\\";
const modules_886afbbe = {\\"b\\":\\"b_module_b\\"};
injector_717f9233(css_ab26163b);

const css_a4ea8038 = \\".c_module_c {\\\\n  color: red;\\\\n}\\\\n\\";
const modules_b45a4370 = {\\"c\\":\\"c_module_c\\"};
injector_717f9233(css_a4ea8038);

const css_4e1fe5d3 = \\".d_module_d {\\\\n  color: #f00;\\\\n}\\\\n\\";
const modules_14f9be16 = {\\"d\\":\\"d_module_d\\"};
injector_717f9233(css_4e1fe5d3);

console.log(modules_dc9297a5, modules_886afbbe, modules_b45a4370, modules_14f9be16);
"
`;

exports[`modules auto-modules-fn: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_717f9233 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_7ffcb4b5 = \\".global {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_7ffcb4b5);

const css_bea182d1 = \\".a {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_bea182d1);

const css_ab26163b = \\".b {\\\\n  color: red; }\\\\n\\";
injector_717f9233(css_ab26163b);

const css_a4ea8038 = \\".c_module_c {\\\\n  color: red;\\\\n}\\\\n\\";
const modules_b45a4370 = {\\"c\\":\\"c_module_c\\"};
injector_717f9233(css_a4ea8038);

const css_4e1fe5d3 = \\".d {\\\\n  color: #f00;\\\\n}\\\\n\\";
injector_717f9233(css_4e1fe5d3);

console.log(css_bea182d1, css_ab26163b, modules_b45a4370, css_4e1fe5d3);
"
`;

exports[`modules auto-modules-regexp: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_717f9233 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_7ffcb4b5 = \\".global {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_7ffcb4b5);

const css_bea182d1 = \\".a {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_bea182d1);

const css_ab26163b = \\".b {\\\\n  color: red; }\\\\n\\";
injector_717f9233(css_ab26163b);

const css_a4ea8038 = \\".c {\\\\n  color: red;\\\\n}\\\\n\\";
injector_717f9233(css_a4ea8038);

const css_4e1fe5d3 = \\".d_module_d {\\\\n  color: #f00;\\\\n}\\\\n\\";
const modules_14f9be16 = {\\"d\\":\\"d_module_d\\"};
injector_717f9233(css_4e1fe5d3);

console.log(css_bea182d1, css_ab26163b, css_a4ea8038, modules_14f9be16);
"
`;

exports[`modules duplication: css 1`] = `
"html {
  --color-primary: green;
}

.style_primary {
  color: green;
  color: var(--color-primary);
}

.shared_test {
  content: \\"test\\";
}

.foo_foo {
}

.bar_bar {
}
"
`;

exports[`modules duplication: js 1`] = `
"const modules_68a066f1 = {\\"test\\":\\"shared_test\\"};

const modules_385fa60f = {\\"foo\\":\\"foo_foo shared_test\\"};

const modules_37b00a3b = {\\"bar\\":\\"bar_bar shared_test\\"};

console.log(modules_68a066f1, modules_385fa60f, modules_37b00a3b);
"
`;

exports[`modules extract: css 1`] = `
".style_module {
  color: #1F4F7F;
}

.style_module2 {
}

@media screen and (min-width: 900px) {
  .composed_composition {
    background-color: aqua;
  }
}

.composed_composition {
  background-color: #BF4040;
}

.composition2_compositioned {
  width: 30%;
}
"
`;

exports[`modules extract: js 1`] = `
"const modules_06c16b9a = {\\"primary\\":\\"#BF4040\\",\\"secondary\\":\\"#1F4F7F\\",\\"module\\":\\"style_module\\",\\"module2\\":\\"style_module2 composed_composition composition2_compositioned\\"};

const modules_c2f65cd3 = {\\"primary\\":\\"#BF4040\\",\\"composition\\":\\"composed_composition composition2_compositioned\\"};

const modules_b033f21c = {\\"compositioned\\":\\"composition2_compositioned\\"};

console.log(modules_06c16b9a.module, modules_c2f65cd3.composition, modules_b033f21c.compositioned);
"
`;

exports[`modules extract-sourcemap-inline: css 1`] = `
".style_module {
  color: #1F4F7F;
}

.style_module2 {
}

@media screen and (min-width: 900px) {
  .composed_composition {
    background-color: aqua;
  }
}

.composed_composition {
  background-color: #BF4040;
}

.composition2_compositioned {
  width: 30%;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uLy4uL21vZHVsZXMvc3R5bGUuY3NzIiwiLi4vLi4vLi4vbW9kdWxlcy9jb21wb3NlZC5jc3MiLCIuLi8uLi8uLi9tb2R1bGVzL3N1YmRpci9jb21wb3NpdGlvbjIuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVBO0VBQ0UsY0FBZ0I7QUFDbEI7O0FBRUE7QUFFQTs7QUNOQTtFQUNFO0lBRUUsc0JBQXNCO0VBQ3hCO0FBQ0Y7O0FBRUE7RUFDRSx5QkFBeUI7QUFDM0I7O0FDWEE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoiaW5kZXguY3NzIiwic291cmNlc0NvbnRlbnQiOlsiQHZhbHVlIHByaW1hcnksIHNlY29uZGFyeSBmcm9tIGNvbG9ycztcblxuLm1vZHVsZSB7XG4gIGNvbG9yOiBzZWNvbmRhcnk7XG59XG5cbi5tb2R1bGUyIHtcbiAgY29tcG9zZXM6IGNvbXBvc2l0aW9uIGZyb20gXCIuL2NvbXBvc2VkLmNzc1wiO1xufVxuIiwiQHZhbHVlIHByaW1hcnkgZnJvbSBjb2xvcnM7XG5cbkBtZWRpYSBzY3JlZW4gYW5kIChtaW4td2lkdGg6IDkwMHB4KSB7XG4gIC5jb21wb3NpdGlvbiB7XG4gICAgY29tcG9zZXM6IGNvbXBvc2l0aW9uZWQgZnJvbSBcIi4vc3ViZGlyL2NvbXBvc2l0aW9uMi5jc3NcIjtcbiAgICBiYWNrZ3JvdW5kLWNvbG9yOiBhcXVhO1xuICB9XG59XG5cbi5jb21wb3NpdGlvbiB7XG4gIGJhY2tncm91bmQtY29sb3I6IHByaW1hcnk7XG59XG4iLCIuY29tcG9zaXRpb25lZCB7XG4gIHdpZHRoOiAzMCU7XG59XG4iXX0= */"
`;

exports[`modules extract-sourcemap-inline: js 1`] = `
"const modules_06c16b9a = {\\"primary\\":\\"#BF4040\\",\\"secondary\\":\\"#1F4F7F\\",\\"module\\":\\"style_module\\",\\"module2\\":\\"style_module2 composed_composition composition2_compositioned\\"};

const modules_c2f65cd3 = {\\"primary\\":\\"#BF4040\\",\\"composition\\":\\"composed_composition composition2_compositioned\\"};

const modules_b033f21c = {\\"compositioned\\":\\"composition2_compositioned\\"};

console.log(modules_06c16b9a.module, modules_c2f65cd3.composition, modules_b033f21c.compositioned);
"
`;

exports[`modules extract-sourcemap-true: css 1`] = `
".style_module {
  color: #1F4F7F;
}

.style_module2 {
}

@media screen and (min-width: 900px) {
  .composed_composition {
    background-color: aqua;
  }
}

.composed_composition {
  background-color: #BF4040;
}

.composition2_compositioned {
  width: 30%;
}

/*# sourceMappingURL=index.css.map */"
`;

exports[`modules extract-sourcemap-true: js 1`] = `
"const modules_06c16b9a = {\\"primary\\":\\"#BF4040\\",\\"secondary\\":\\"#1F4F7F\\",\\"module\\":\\"style_module\\",\\"module2\\":\\"style_module2 composed_composition composition2_compositioned\\"};

const modules_c2f65cd3 = {\\"primary\\":\\"#BF4040\\",\\"composition\\":\\"composed_composition composition2_compositioned\\"};

const modules_b033f21c = {\\"compositioned\\":\\"composition2_compositioned\\"};

console.log(modules_06c16b9a.module, modules_c2f65cd3.composition, modules_b033f21c.compositioned);
"
`;

exports[`modules extract-sourcemap-true: map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"../../../../modules/style.css\\",\\"../../../../modules/composed.css\\",\\"../../../../modules/subdir/composition2.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,cAAgB;AAClB;;AAEA;AAEA;;ACNA;EACE;IAEE,sBAAsB;EACxB;AACF;;AAEA;EACE,yBAAyB;AAC3B;;ACXA;EACE,UAAU;AACZ\\",\\"file\\":\\"index-25a95cf1.css\\",\\"sourcesContent\\":[\\"@value primary, secondary from colors;\\\\n\\\\n.module {\\\\n  color: secondary;\\\\n}\\\\n\\\\n.module2 {\\\\n  composes: composition from \\\\\\"./composed.css\\\\\\";\\\\n}\\\\n\\",\\"@value primary from colors;\\\\n\\\\n@media screen and (min-width: 900px) {\\\\n  .composition {\\\\n    composes: compositioned from \\\\\\"./subdir/composition2.css\\\\\\";\\\\n    background-color: aqua;\\\\n  }\\\\n}\\\\n\\\\n.composition {\\\\n  background-color: primary;\\\\n}\\\\n\\",\\".compositioned {\\\\n  width: 30%;\\\\n}\\\\n\\"]}"`;

exports[`modules inject: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_86728f90 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_6856db17 = \\".style_module {\\\\n  color: #1F4F7F;\\\\n}\\\\n\\\\n.style_module2 {\\\\n}\\\\n\\";
const modules_06c16b9a = {\\"primary\\":\\"#BF4040\\",\\"secondary\\":\\"#1F4F7F\\",\\"module\\":\\"style_module\\",\\"module2\\":\\"style_module2 composed_composition composition2_compositioned\\"};
injector_86728f90(css_6856db17);

const css_99f8382e = \\"@media screen and (min-width: 900px) {\\\\n  .composed_composition {\\\\n    background-color: aqua;\\\\n  }\\\\n}\\\\n\\\\n.composed_composition {\\\\n  background-color: #BF4040;\\\\n}\\\\n\\";
const modules_c2f65cd3 = {\\"primary\\":\\"#BF4040\\",\\"composition\\":\\"composed_composition composition2_compositioned\\"};
injector_86728f90(css_99f8382e);

const css_1f7ddd56 = \\".composition2_compositioned {\\\\n  width: 30%;\\\\n}\\\\n\\";
const modules_b033f21c = {\\"compositioned\\":\\"composition2_compositioned\\"};
injector_86728f90(css_1f7ddd56);

console.log(modules_06c16b9a.module, modules_c2f65cd3.composition, modules_b033f21c.compositioned);
"
`;

exports[`modules inject-object: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_86728f90 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_6856db17 = \\".style_module {\\\\n  color: #1F4F7F;\\\\n}\\\\n\\\\n.style_module2 {\\\\n}\\\\n\\";
const modules_06c16b9a = {\\"primary\\":\\"#BF4040\\",\\"secondary\\":\\"#1F4F7F\\",\\"module\\":\\"style_module\\",\\"module2\\":\\"style_module2 composed_composition composition2_compositioned\\"};
injector_86728f90(css_6856db17);

const css_99f8382e = \\"@media screen and (min-width: 900px) {\\\\n  .composed_composition {\\\\n    background-color: aqua;\\\\n  }\\\\n}\\\\n\\\\n.composed_composition {\\\\n  background-color: #BF4040;\\\\n}\\\\n\\";
const modules_c2f65cd3 = {\\"primary\\":\\"#BF4040\\",\\"composition\\":\\"composed_composition composition2_compositioned\\"};
injector_86728f90(css_99f8382e);

const css_1f7ddd56 = \\".composition2_compositioned {\\\\n  width: 30%;\\\\n}\\\\n\\";
const modules_b033f21c = {\\"compositioned\\":\\"composition2_compositioned\\"};
injector_86728f90(css_1f7ddd56);

console.log(modules_06c16b9a.module, modules_c2f65cd3.composition, modules_b033f21c.compositioned);
"
`;

exports[`modules named-exports: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_1dfca575 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_805c5fb0 = \\".style_valid {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_css {\\\\n  color: green;\\\\n}\\\\n\\";
const modules_c5c61d93 = {\\"valid\\":\\"style_valid\\",\\"new\\":\\"style_new\\",\\"css\\":\\"style_css\\"};
const css = css_805c5fb0;
const valid = \\"style_valid\\";
const _new = \\"style_new\\";
const _css = \\"style_css\\";
injector_1dfca575(css_805c5fb0);

var style = /*#__PURE__*/Object.freeze({
  __proto__: null,
  css: css,
  'default': modules_c5c61d93,
  valid: valid,
  _new: _new,
  _css: _css
});

console.log(style);
"
`;

exports[`modules named-exports-custom-class-name: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_1dfca575 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_805c5fb0 = \\".style_valid {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_css {\\\\n  color: green;\\\\n}\\\\n\\";
const modules_c5c61d93 = {\\"valid\\":\\"style_valid\\",\\"new\\":\\"style_new\\",\\"css\\":\\"style_css\\"};
const css = css_805c5fb0;
const validhacked = \\"style_valid\\";
const newhacked = \\"style_new\\";
const csshacked = \\"style_css\\";
injector_1dfca575(css_805c5fb0);

var style = /*#__PURE__*/Object.freeze({
  __proto__: null,
  css: css,
  'default': modules_c5c61d93,
  validhacked: validhacked,
  newhacked: newhacked,
  csshacked: csshacked
});

console.log(style);
"
`;

exports[`multiple-instances already-processed: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_14375eb8 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_3f173abc = \\".bar_less {\\\\n  color: magenta;\\\\n}\\\\n\\";
const modules_0fe909db = {\\"less\\":\\"bar_less\\"};
const css = css_3f173abc;
const less = \\"bar_less\\";
injector_14375eb8(css_3f173abc);

export default modules_0fe909db;
export { css, less };
"
`;

exports[`multiple-instances default: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_7eff9fe8 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_39967a1a = \\".style {\\\\n  color: red;\\\\n}\\\\n\\";
injector_7eff9fe8(css_39967a1a);

const css_3f173abc = \\".less {\\\\n  color: magenta;\\\\n}\\\\n\\";
injector_7eff9fe8(css_3f173abc);

const css_01776caf = \\".mod_mod {\\\\n  color: royalblue;\\\\n}\\\\n\\";
const modules_c3cfbd24 = {\\"mod\\":\\"mod_mod\\"};
injector_7eff9fe8(css_01776caf);

console.log(modules_c3cfbd24);
"
`;

exports[`on-extract-fn: js 1`] = `
"const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\";

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`sass data: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_7d4ccedb (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_d5e3885b = \\".data {\\\\n  color: red; }\\\\n\\";
injector_7d4ccedb(css_d5e3885b);
"
`;

exports[`sass default: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_de38afa6 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_c2755970 = \\".style {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\";
injector_de38afa6(css_c2755970);
"
`;

exports[`sass import: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_948a9cfd (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a77306c7 = \\".a {\\\\n  color: magenta; }\\\\n\\\\n.b {\\\\n  color: red; }\\\\n\\\\n.c {\\\\n  color: red; }\\\\n\\\\n.foo {\\\\n  color: royalblue; }\\\\n\\";
injector_948a9cfd(css_a77306c7);
"
`;

exports[`sass modules: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_cc9f7d0d (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_022686dd = \\".style_someStyle {\\\\n  color: red; }\\\\n\\";
const modules_c56d3964 = {\\"some-style\\":\\"style_someStyle\\"};
injector_cc9f7d0d(css_022686dd);

console.log(modules_c56d3964);
"
`;

exports[`sass sourcemap: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_de38afa6 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_c2755970 = \\".style {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zYXNzL3N0eWxlLnNhc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0VBQ1YsVUFBVSxFQUFBIiwic291cmNlc0NvbnRlbnQiOlsiLnN0eWxlIHtcbiAgd2lkdGg6IDMwJTtcbiAgY29sb3I6IHJlZDsgfVxuIl19 */\\";
injector_de38afa6(css_c2755970);
"
`;

exports[`sass use: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_e6e31059 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_41ddbe0c = \\".button {\\\\n  border-radius: 3px;\\\\n  padding: 8px;\\\\n}\\";
injector_e6e31059(css_41ddbe0c);
"
`;

exports[`sourcemap inline: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_8aeabfb4 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvZm9vLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5mb28ge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
injector_8aeabfb4(css_a87c82eb);

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvYmFyLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
injector_8aeabfb4(css_6e569e18);

const css_a00496d3 = \\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUuc3R5bCJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFdBQU87RUFDUCxnQkFBWTtBQUNkIiwic291cmNlc0NvbnRlbnQiOlsiLnN0eWx1cyB7XG4gIGNvbG9yOiAjZjAwO1xuICBiYWNrZ3JvdW5kOiAjZjAwO1xufVxuIl19 */\\";
injector_8aeabfb4(css_a00496d3);

const css_855b3ad0 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUucGNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5wY3NzIHtcbiAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */\\";
injector_8aeabfb4(css_855b3ad0);

const css_31899cde = \\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUuc2FzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7RUFDVixVQUFVLEVBQUEiLCJzb3VyY2VzQ29udGVudCI6WyIuc2FzcyB7XG4gIHdpZHRoOiAzMCU7XG4gIGNvbG9yOiByZWQ7IH1cbiJdfQ== */\\";
injector_8aeabfb4(css_31899cde);

const css_aee437ad = \\".less {\\\\n  color: #6c94be;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUubGVzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFHQTtFQUNFLGNBQUE7QUFGRiIsInNvdXJjZXNDb250ZW50IjpbIkBuaWNlLWJsdWU6ICM1YjgzYWQ7XG5AbGlnaHQtYmx1ZTogQG5pY2UtYmx1ZSArICMxMTE7XG5cbi5sZXNzIHtcbiAgY29sb3I6IEBsaWdodC1ibHVlO1xufVxuIl19 */\\";
injector_8aeabfb4(css_aee437ad);

console.log(css_a87c82eb, css_6e569e18);
"
`;

exports[`sourcemap true: js 1`] = `
"/** @type {HTMLElement[]} */
var containers = [];
/** @type {{prepend:HTMLStyleElement,append:HTMLStyleElement}[]} */
var styleTags = [];

/**
 * @param {string} css
 * @param {object} [options={}]
 * @param {boolean} [options.prepend]
 * @param {boolean} [options.singleTag]
 * @param {string} [options.container]
 * @returns {void}
 */
function injector_8aeabfb4 (css, options) {
  if (!css || typeof document === \\"undefined\\") return;
  if (typeof options === \\"undefined\\") options = {};

  var position = options.prepend === true ? \\"prepend\\" : \\"append\\";
  var singleTag = typeof options.singleTag !== \\"undefined\\" ? options.singleTag : false;

  var container =
    typeof options.container !== \\"undefined\\"
      ? document.querySelector(options.container)
      : document.getElementsByTagName(\\"head\\")[0];

  function createStyleTag() {
    var styleTag = document.createElement(\\"style\\");
    styleTag.setAttribute(\\"type\\", \\"text/css\\");
    var pos = position === \\"prepend\\" ? \\"afterbegin\\" : \\"beforeend\\";
    container.insertAdjacentElement(pos, styleTag);
    return styleTag;
  }

  /** @type {HTMLStyleElement} */
  var styleTag;

  if (singleTag) {
    var id = containers.indexOf(container);

    if (id === -1) {
      id = containers.push(container) - 1;
      styleTags[id] = {};
    }

    if (styleTags[id] && styleTags[id][position]) {
      styleTag = styleTags[id][position];
    } else {
      styleTag = styleTags[id][position] = createStyleTag();
    }
  } else {
    styleTag = createStyleTag();
  }

  // strip potential UTF-8 BOM if css was read from a file
  if (css.charCodeAt(0) === 0xfeff) css = css.substring(1);

  if (styleTag.styleSheet) {
    styleTag.styleSheet.cssText += css;
  } else {
    styleTag.appendChild(document.createTextNode(css));
  }
}

const css_a87c82eb = \\".foo {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvZm9vLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5mb28ge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
injector_8aeabfb4(css_a87c82eb);

const css_6e569e18 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvYmFyLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
injector_8aeabfb4(css_6e569e18);

const css_a00496d3 = \\".stylus {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUuc3R5bCJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFdBQU87RUFDUCxnQkFBWTtBQUNkIiwic291cmNlc0NvbnRlbnQiOlsiLnN0eWx1cyB7XG4gIGNvbG9yOiAjZjAwO1xuICBiYWNrZ3JvdW5kOiAjZjAwO1xufVxuIl19 */\\";
injector_8aeabfb4(css_a00496d3);

const css_855b3ad0 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUucGNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWiIsInNvdXJjZXNDb250ZW50IjpbIi5wY3NzIHtcbiAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */\\";
injector_8aeabfb4(css_855b3ad0);

const css_31899cde = \\".sass {\\\\n  width: 30%;\\\\n  color: red; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUuc2FzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7RUFDVixVQUFVLEVBQUEiLCJzb3VyY2VzQ29udGVudCI6WyIuc2FzcyB7XG4gIHdpZHRoOiAzMCU7XG4gIGNvbG9yOiByZWQ7IH1cbiJdfQ== */\\";
injector_8aeabfb4(css_31899cde);

const css_aee437ad = \\".less {\\\\n  color: #6c94be;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9fdGVzdHNfXy9maXh0dXJlcy9zaW1wbGUvc3R5bGUubGVzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFHQTtFQUNFLGNBQUE7QUFGRiIsInNvdXJjZXNDb250ZW50IjpbIkBuaWNlLWJsdWU6ICM1YjgzYWQ7XG5AbGlnaHQtYmx1ZTogQG5pY2UtYmx1ZSArICMxMTE7XG5cbi5sZXNzIHtcbiAgY29sb3I6IEBsaWdodC1ibHVlO1xufVxuIl19 */\\";
injector_8aeabfb4(css_aee437ad);

console.log(css_a87c82eb, css_6e569e18);
"
`;
